# Outlook_app_conection

./: README.md  main.py  pyproject.toml  text.json
app_pescanova/: __init__.py  extraction_image.py  generate_file.py  get_folder_messages.py  list_message_by_id.py  register.json  save_log_message.py
app_pescanova/api/: idp_extract.py  instance_edit_workflow.py  instance_execute_activity_wf.py  instance_newWorkflow.py  newAttachment.py  xml_newWorkflowEditData.py
app_pescanova/xml_soap/: clean_folders.py  edit_xml_workflow_id.py  generate_xml_newAttachment.py
webhook/: __init__.py  class_tokens.py  id_subscription.json  subscription.py  subscription_expiration.py  webhook_router_fastapi.py
